src/public/assets/css/styles.css
/* ... */
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}

.wrapper {
  max-width: 72rem;
  margin: 3.2rem auto 7.2rem;
  padding: 0 1.6rem;
  box-sizing: content-box; /* Ensure the max-width doesn't change */
}

/* Main header */
.site-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  font-weight: 700;
  margin-bottom: 6.4rem;
}

.site-header a {
  text-decoration-color: transparent;
}

.site-header ul {
  display: flex;
  align-items: center;
  margin: 0;
  padding: 0;
  list-style: none;
}

.site-header .logo {
  margin-right: 1.6rem;
  font-size: 2.4rem;
}

.site-header .logo span {
  color: var(--color-highlight);
}

.site-header .link {
  margin-right: 0.8rem;
  padding: 0.4rem 1rem;
  border-radius: 0.4rem;
}

@media (min-width: 480px) {
  .site-header .logo {
    margin-right: 2.8rem;
  }

  .site-header .link {
    margin-right: 1.2rem;
    padding: 0.6rem 1.4rem;
  }
}

@media (hover: hover) and (pointer: fine) {
  .site-header a:hover {
    text-decoration-color: var(--color-highlight);
  }
}

.site-header .link.active {
  background-color: var(--color-shade-10);
}

/* Post preview */
.post-preview {
  margin-top: 5.6rem;
}

.post-preview h2 {
  margin: 0 0 0.2rem;
  line-height: 1.2;
  font-size: 3.4rem;
}

.post-preview h2 a {
  display: inline-block;
  text-decoration-thickness: 0.3rem;
}

.post-preview .datetime {
  display: inline-block;
  color: var(--color-shade-55);
  font-variant: all-small-caps;
}

.post-preview p {
  margin: 0.8rem 0 0.4rem;
  font-size: 2.2rem;
  font-family: 'Source Serif 4', serif;
}

/* Profile picture */
.profile-picture {
  width: 12rem;
  height: 12rem;
  padding: 0.7rem;
  border: 0.2rem solid var(--color-highlight);
  border-radius: 50%;
  overflow: hidden;
}

.profile-picture img {
  display: block;
  width: 100%;
  height: 100%;
  max-width: 100%;
  border-radius: 50%;
}

/* Tag list */
.tag-list {
  display: flex;
  flex-wrap: wrap;
  margin: 0;
  padding: 0;
  font-size: 1.6rem;
  list-style: none;
}

.tag-list li {
  flex: 0 0 auto;
  display: block;
  margin: 1.6rem 1.6rem 0 0;
}

.tag-list.condensed li {
  margin: 0.8rem 0.8rem 0 0;
}

.tag-list a {
  display: block;
  padding: 0.7rem 1.4rem 0.7rem 1.2rem;
  color: var(--color-shade-75);
  line-height: normal;
  text-decoration: none;
  border-radius: 0.4rem;
  background-color: var(--color-shade-7);
}

.tag-list.condensed a {
  padding: 0.4rem 1.4rem 0.4rem 1.2rem;
}

.tag-list .hashtag {
  margin-right: 0.1rem;
  pointer-events: none;
  opacity: 0.7;
}

.tag-list .link-effect {
  text-decoration-color: transparent;
  text-decoration-thickness: 0.1rem;
}

@media (hover: hover) and (pointer: fine) {
  .tag-list a:hover .link-effect {
    text-decoration-color: var(--color-highlight);
  }
}

/* Page: homepage */

.page-home {
  text-align: center;
}

.page-home .profile-picture {
  margin: 0 auto;
}

.page-home h1 {
  margin: 2.8rem 0 0;
  font: inherit;
  font-size: 4.4rem;
  font-weight: 700;
  line-height: normal;
}

.page-home h1 span {
  color: var(--color-highlight);
}

.page-home p {
  margin: 2.4rem 0 0;
  font-size: 2.6rem;
}

@media (min-width: 480px) {
  .page-home p span {
    display: block;
  }
}

/* Page: post */

.page-post h1 {
  margin: 0;
  line-height: 1.2;
  font-size: 4.8rem;
}

.page-post .datetime {
  margin: 1.4rem 0 -1rem;
  color: var(--color-shade-55);
}

.post-content {
  font-size: 2.2rem;
  font-family: 'Source Serif 4', serif;
}

.post-content ol,
.post-content ul,
.post-content p {
  margin: 2.2rem 0 0;
}

.post-content blockquote,
.post-content pre {
  margin: 2.4rem 0;
  padding: 1.6rem 2.4rem;
  background-color: var(--color-shade-7);
  border-radius: 0.4rem;
}

.post-content h2 {
  margin: 4.8rem 0 -1.2rem;
  font-size: 2.8rem;
  font-family: 'Source Sans 3', sans-serif;
}

.post-content h3 {
  margin: 3.2rem 0 -1.6rem;
  font-size: 2.2rem;
  font-family: 'Source Sans 3', sans-serif;
}

/* Regular links */
.post-content a:not(.anchor) {
  font-weight: 600;
}

.post-content a.anchor {
  margin-left: 0.2rem;
  padding: 0 0.6rem;
  color: var(--color-shade-40);
  font-size: 0.8em;
  text-decoration: none;
}

@media (hover: hover) and (pointer: fine) {
  .post-content a.anchor:hover {
    color: var(--color-highlight);
  }
}

.post-content pre {
  line-height: 1.7;
  font-size: 1.5rem;
  white-space: pre;
  overflow: auto;
}

.post-content pre code {
  line-height: inherit;
  font-size: inherit;
}

.post-content code {
  font-family: Menlo, monospace;
  text-shadow: 0.1rem 0.1rem 0 var(--color-background);
  word-spacing: normal;
  word-break: normal;
  tab-size: 2;
  hyphens: none;
}

/* Inline code */
.post-content code:not(pre code) {
  display: inline-block;
  padding: 0 0.6rem;
  font-size: 1.7rem;
  background-color: var(--color-shade-10);
  border-radius: 0.4rem;
}

.post-content code::selection,
.post-content code *::selection {
  text-shadow: none !important;
}

.post-content blockquote p:first-of-type {
  margin-top: 0;
}

.post-content blockquote p:last-of-type {
  margin-bottom: 0;
}

.post-content hr {
  position: relative;
  margin: 4rem 0 5.6rem;
  text-align: center;
  border: none;
}

.post-content hr::after {
  content: '...';
  display: inline-block;
  font-size: 3.2rem;
  letter-spacing: 1.6rem;
}

.page-post .tag-list {
  margin-top: 1.6rem;
}

.page-post .author {
  display: flex;
  margin: 8rem 0 9.6rem;
}

.page-post .author .picture {
  flex: 0 0 auto;
  padding-top: 0.8rem;
}

.page-post .author .profile-picture {
  width: 10rem;
  height: 10rem;
}

.page-post .author .description {
  flex: 1 1 auto;
  padding-left: 2rem;
}

@media (min-width: 480px) {
  .page-post .author .profile-picture {
    width: 12rem;
    height: 12rem;
  }

  .page-post .author .description {
    padding-left: 4rem;
  }
}

.page-post .author .name {
  font-weight: 700;
  font-size: 2rem;
}
/* ... */

